# study-fullstack-web-dev

./: .gitignore  README.md  docker-compose.yml
.devcontainer/backend/: Dockerfile  devcontainer.json
.devcontainer/frontend/: devcontainer.json
.devcontainer/fullstack/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: README.md  pyproject.toml
backend/api/hello/: urls.py  views.py
backend/api/hello_db/: models.py  urls.py  views.py
backend/api/hello_db/migrations/: 0001_initial.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py
frontend/: bun.lockb  next.config.mjs  package.json  tailwind.config.ts
frontend/app/: page.tsx
frontend/app/hello_backend/: page.tsx
frontend/app/hello_backend_db/: page.tsx
frontend/app/hello_frontend/: page.tsx
frontend/app/hello_frontend_fetch/: page.tsx
frontend/app/hello_frontend_state/: page.tsx
frontend/app/hello_frontend_state_ng_change/: page.tsx
frontend/app/hello_frontend_state_ng_loop/: page.tsx
frontend/app/inventory/: layout.tsx
frontend/app/inventory/products/: layout.tsx  page.tsx  styles.module.css
frontend/app/inventory/products/[id]/: page.tsx
frontend/app/inventory/products/sample/: dummy_inventories.json  dummy_products.json
frontend/app/login/: page.tsx
frontend/app/sample_usestate/: page.tsx
