[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["re2osushi8888 <re.2osushi8888@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.2"
django = "^5.1.1"
mysqlclient = "^2.2.4"
django-cors-headers = "^4.4.0"


[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"
pytest = "^8.3.2"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.15.1"}
django-stubs = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.mypy]
show_error_context = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main"
]

[tool.django-stubs]
django_settings_module = "config.settings"
